--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html ng-app='ShoppingListCheckOff' lang="en">
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="scripts/angular.min.js"></script>
+    <script src="scripts/app.js"></script>
   </head>
 <body>
   <div class="container">
@@ -13,22 +15,32 @@
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6">
-     <h2>To Buy:</h2>
-     <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-     </ul>
-     <div class="emptyMessage">Everything is bought!</div>
-    </div>
+    <div ng-controller='ToBayController as itemToBay' class="col-md-6">
+     <h2>To Bay:</h2>
 
+     <ul>
+       <li ng-repeat="items in itemToBay.items">
+         {{$index+1}}.   
+         <button ng-click="itemToBay.BayItem($index)" class="btn btn-default">
+         <span class="glyphicon glyphicon-ok"></span>
+         Bought
+        </button>
+        {{items.quantity}} of {{items.name}}
+     </ul>
+     <div ng-if="itemToBay.checkBasket.showBay()" class="emptyMessage">
+       Everything is bought!
+     </div>
+   </div>
     <!-- Already Bought List -->
-    <div class="col-md-6">
+    <div ng-controller='AlreadyBoughtController as itemBought' class="col-md-6">
      <h2>Already Bought:</h2>
      <ul>
-       <li>Bought 10 cookies</li>
+       <li ng-repeat="boughtitems in itemBought.boughtitems">
+         {{$index+1}}. {{boughtitems.quantity}} of {{boughtitems.name}}
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div ng-if="itemBought.checkBasket.showBought()" class="emptyMessage">
+       Nothing bought yet!
+     </div>
     </div>
   </div>
 </div>
